# python-docutils-exts

./: Makefile.am  README.md  README.rst  build.sh  configure.ac  configure.ac.in  package.spec.in  python-docutils-exts.spec.in  rpm.mk
etc/python-docutils-exts/rst2odt.d/: 00_default.conf
etc/python-docutils-exts/rst2pdf.d/: 00_default.conf
examples/: 00_index.rst  01_legal.rst  20_samples.rst  Makefile  runtests.sh  testenv.sh
examples/ctx/: 00_base.yml  10_hosts.yml
examples/images/xcf/: 0.xcf
examples/rst2odt/: 00_00_revision.rst.j2  00_index.rst  30_template.rst.j2  Makefile
examples/rst2odt/logs/: hello_c.txt
examples/rst2pdf-slide/: Makefile  sample_slide.rst
pkg/: package.spec.in  pkginfo.sh  rpm.mk
usr/share/docutils-exts-common/: Makefile.common
usr/share/docutils-exts-common/templates/: Makefile.j2
usr/share/rst2odt/aux/: Makefile  Makefile.bootstrap
usr/share/rst2odt/styles/: ja.odt
usr/share/rst2odt/styles/en/: content.xml  styles.xml
usr/share/rst2odt/styles/ja/: content.xml  meta.xml  settings.xml  styles.xml
usr/share/rst2odt/templates/: 00_index.rst.j2
usr/share/rst2odt/templates/default/: 00_index.rst.j2  Makefile.j2
usr/share/rst2pdf/aux/: Makefile  Makefile.bootstrap
usr/share/rst2pdf/styles/doc/: std.style
usr/share/rst2pdf/styles/slides/: std.style
usr/share/rst2pdf/templates/: 00_index.rst.j2
usr/share/rst2pdf/templates/default/: Makefile.j2
usr/share/rst2pdf/templates/slide/: std.coverpage.tmpl
