AC_INIT([python-docutils-exts],[0.0.4])
AM_INIT_AUTOMAKE([no-dist-gzip dist-xz foreign subdir-objects tar-pax])

dnl http://www.flameeyes.eu/autotools-mythbuster/automake/silent.html
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AC_PROG_LN_S
AC_PROG_MKDIR_P

AC_CONFIG_FILES([
Makefile
python-docutils-exts.spec
])

AC_OUTPUT
